--- a/index.html.html
+++ b/index.html.html
@@ -221,7 +221,7 @@
             <h2 class="text-5xl font-bold section-header mb-16 animate-on-scroll">Resume</h2>
             <div class="card rounded-2xl p-10 mx-auto max-w-md animate-on-scroll">
                 <p class="text-gray-400 mb-6">Download my resume for a detailed overview of my skills and experience.</p>
-                <a href="PES319 CV.docx" download class="inline-block bg-gradient-to-r from-purple-500 to-blue-500 text-white px-8 py-4 rounded-lg hover:from-purple-600 hover:to-blue-600 transition">📂 Download Resume</a>
+                <a href="PES319 CV.pdf" download class="inline-block bg-gradient-to-r from-purple-500 to-blue-500 text-white px-8 py-4 rounded-lg hover:from-purple-600 hover:to-blue-600 transition">📂 Download Resume</a>
             </div>
         </div>
     </section>
